@@ -2,7 +2,7 @@
 # Table structure for table 'tx_realurl_pathcache'
 #
 CREATE TABLE tx_realurl_pathcache (
-  cache_id int(11) DEFAULT '0' NOT NULL auto_increment,
+  cache_id int(11) NOT NULL auto_increment,
   page_id int(11) DEFAULT '0' NOT NULL,
   language_id int(11) DEFAULT '0' NOT NULL,
   rootpage_id int(11) DEFAULT '0' NOT NULL,
@@ -12,8 +12,8 @@ CREATE TABLE tx_realurl_pathcache (
   expire int(11) DEFAULT '0' NOT NULL,
 
   PRIMARY KEY (cache_id),
-#  KEY page_id (page_id),
-  KEY pathq (hash,rootpage_id,expire)
+  KEY pathq1 (hash,rootpage_id,expire)
+  KEY pathq2 (page_id,language_id,expire)
 ) ENGINE=InnoDB;
 
 #
